--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body{
     background: linear-gradient(45deg,#08001f,#30197d);
     color: #fff;
     position: relative;
+    background-image: url("bg1.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .clock{
     border: 1px solid #606060;
